# datagen

./: .gitignore  README.md
datasets/: interp.md
datasets/prompts/: prompts.yaml
eggy/: Cargo.toml  Dockerfile  README.md  pyproject.toml
eggy/src/: build.rs  lib.rs  lsystem.rs  regex.rs  simpl.rs
gym/: debug.txt  loop.py  requirements.txt  reset_env.sh
reports/: leetcode-extended.html
scripts/: continue.sh  count_uniq_ids.sh
slurm/: agent.sh  agent.sub  ant.sh  ant.sub  convert.sh  convert.sub  data.sh  data.sub  dpp-img.sh  dpp.sh  dpp.sub  finetune.sh  finetune.sub  init_sweep.sh  interactive.sub  lsys.sh  lsys.sub  mpdata.sh  prep-array-config.py  rollout.sh  rollout.sub  runner.sh  runner.sub  solve.sh  solve.sub
slurm/evaluate/: README.md  eval-arr.sub  mpdata-test.sh  mpdata.sh  n10.cfg  n100.cfg  prep-array-config.py
slurm/rollout/: all.cfg  models.txt  rollout-arr.sub  rollout.sh  rollout.sub  tiny-models.txt  tiny.cfg
src/: Makefile  analyze.py  baseline.py  book_zoo.py  cfg.py  codex.py  codex_prompter.py  codex_zoo.py  convert-ps.sh  datagen.py  dc.py  distances.py  dpp.py  egraph.py  evaluate.py  evo.py  examine.py  examples.py  execution.py  featurizers.py  grammar.py  img_dist.py  inout.py  io.py  kde.py  lang.py  learner.py  leet.py  lindenmayer.py  lineage.py  main.py  max_heap.py  npy-to-img.sh  ns.py  param_tester.py  parse.py  point.py  program.py  prompts.py  random_baseline.py  (+23 more)
src/analysis/: eyeball.py  wandb-util.py
tests/: test_execution.py  test_featurizers.py  test_grammar.py  test_lindenmayer.py  test_util.py
(+61 files in other folders)
